# book-management-backend/docs/swagger.yaml
@@ -74,6 +74,13 @@ definitions:
     - authorId
     - title
     type: object
+  services.BookUpdateRequest:
+    properties:
+      authorId:
+        type: integer
+      title:
+        type: string
+    type: object
 info:
   contact: {}
   description: A simple RESTful Book Management API built with Golang
@@ -348,6 +355,44 @@ paths:
               type: string
             type: object
       summary: Get book details by ID
+      tags:
+      - books
+    patch:
+      consumes:
+      - application/json
+      description: Update book fields partially by ID (PATCH)
+      parameters:
+      - description: Book ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Book fields to update
+        in: body
+        name: book
+        required: true
+        schema:
+          $ref: '#/definitions/services.BookUpdateRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.BookResponse'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Update a book partially
       tags:
       - books
 swagger: "2.0"
